# homo-graphify

./: .gitignore  README.md  pyproject.toml
homo_graphify/: __init__.py  __main__.py  chinese.py  llm.py
